--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "date-fns": "^2.29.3",
     "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
+    "firebase": "^9.15.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.1",
     "next": "13.0.7",
