--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "18.11.17",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "@types/uuid": "^9.0.0",
     "axios": "^1.2.1",
     "bcryptjs": "^2.4.3",
     "cookie": "^0.5.0",
@@ -30,7 +31,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2"
